apps/media/radarr/deployment.yaml
#
# Reference:
# https://docs.linuxserver.io/images/docker-radarr/
# https://github.com/Radarr/Radarr
#

apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media
  labels:
    app.kubernetes.io/component: service
    app.kubernetes.io/name: radarr
spec:
  selector:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: radarr
  type: ClusterIP
  ports:
    - name: http
      port: 7878
      protocol: TCP
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: media
  labels:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: radarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/component: app
      app.kubernetes.io/name: radarr
  template:
    metadata:
      labels:
        app.kubernetes.io/component: app
        app.kubernetes.io/name: radarr
    spec:
      restartPolicy: Always
      nodeAffinity:
        required:
          nodeSelectorTerms:
            - matchExpressions:
                - key: kubernetes.io/hostname
                  operator: In
                  values:
                    - minas-tirith
                    - minas-tirith-vm
      containers:
        - name: radarr
          image: lscr.io/linuxserver/radarr:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 7878
              protocol: TCP
          volumeMounts:
            - name: radarr-pvc
              mountPath: /config
            - name: deluge-pvc
              mountPath: /data
              subPath: data
            - name: media-data-pvc
              mountPath: /movies
              subPath: movies
      volumes:
        - name: radarr-pvc
          persistentVolumeClaim:
            claimName: radarr-pvc
        - name: deluge-pvc
          persistentVolumeClaim:
            claimName: deluge-pvc
        - name: media-data-pvc
          persistentVolumeClaim:
            claimName: media-data-pvc
